--- a/gateway/index.html
+++ b/gateway/index.html
@@ -34,14 +34,14 @@
             <hr class="border-secondary border-opacity-10 mb-8 mx-5">
             <div class="px-5 mb-8">
                 <h3>
-                    Welcome to JuezLTI Beta website!!!
+                    Welcome to JuezLTI website!!!
                 </h3>
                 <div class="text-[#444043] tracking-wide main-text">
                     <p>
-                        This is the beta version of JuezLTI. At the moment, you can use the tool with xml and java exercises, but databases and more programming languages are planned to be included. To test JuezLTI, please click on the following banner:
+                        This is the current version of JuezLTI. At the moment, you can use the tool with databases and programming exercises, but xml is planned to be included. To test JuezLTI, please click on the following banner:
                     </p>
                     <p class="flex justify-center items-center !mt-8 !mb-10">
-                        <a href="/tsugi/store/test/codetest">
+                        <a href="/tsugi/store/">
                             <img class="h-48 bg-white rounded-xl border hover:rounded-3xl border-secondary border-opacity-50 hover:border-primary transition-all cursor-pointer px-4 pt-6 pb-4 object-scale-down" src="/assets/try-me.0adcaf04.png">
                         </a>
                     </p>
